# IceDownloader

./: .gitignore  installer.iss  package.json
IceDownloader/: background.js  content.js  manifest.json  popup.html  popup.js
ice-daemon/: Cargo.toml  package.json
ice-daemon/src/: main.rs
scripts/: build-installer.ps1
