[package]
name = "ice-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
async-stream = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tray-icon = "0.14"
winreg = "0.52"
crossbeam-channel = "0.5"
lazy_static = "1.4"
tempfile = "3.10"
image = "0.24" # For loading tray icon
windows-sys = { version = "0.61.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading"] }
tracing-appender = "0.2.4"
